# clockify-flex-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  holidays.json  justfile
src/: args.rs  clockify.rs  extra_settings.rs  main.rs  models.rs  utils.rs
src/extra_settings/: schema.rs
src/utils/: cache.rs  table.rs
