[package]
name = "clockify-flex-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = "4.5.11"
dotenv = "0.15.0"
futures = "0.3.30"
itertools = "0.13.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["fs", "full"] }
url = { version = "2.5.2", features = ["serde"] }
